--- a/Client/main.css
+++ b/Client/main.css
@@ -1,92 +1,86 @@
-
 .game-list {
     display: inline-block;
 }
 
-body{
+body {
     text-align: center;
     /*background-image: url("img/bg.jpg");
     background-color: #cccccc;*/
     background-color: transparent !important;
 }
+
 html {
-
-  background: url(img/bg.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    background: url(img/bg.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
-    #menu {
-        text-align: center; }
-    
-    
-    .fader {
-        /* Giving equal sizes to each element */
-        width:    15%;
-        height:   15%;
-        
-        /* Positioning elements in lines */
-        display:  inline-block;
-        
-        /* This is necessary for position:absolute to work as desired */
-        position: relative;
-        
-        /* Preventing zoomed images to grow outside their elements */
-            margin-left: 5%;
+#menu {
+    text-align: center;
+}
+
+.fader {
+    /* Giving equal sizes to each element */
+    width: 15%;
+    height: 15%;
+    /* Positioning elements in lines */
+    display: inline-block;
+    /* This is necessary for position:absolute to work as desired */
+    position: relative;
+    /* Preventing zoomed images to grow outside their elements */
+    margin-left: 5%;
     margin-right: 5%;
-        }
-    
-    
-        .fader img {
-            /* Stretching the images to fill whole elements */
-            width:       100%;
-            height:      100%;
-            
-            /* Preventing blank space below the image */
-            line-height: 0;
-            
+}
 
-            /* A one-second transition was to disturbing for me */
-            -webkit-transition: all 0.3s ease;
-            -moz-transition:    all 0.3s ease;
-            -o-transition:      all 0.3s ease;
-            -ms-transition:     all 0.3s ease;
-            transition:         all 0.3s ease; }
-            
-            .fader img:hover {
-                /* Making images appear bigger and transparent on mouseover */
-                width:   120%;
-                opacity: 1;
-                height:  120%; }
-    
-        .fader .text {
-            /* Placing text behind images */
-            z-index: -10;     
-        
-            /* Positioning text top-left conrner in the middle of elements */
-            position: absolute;
-            top:      50%;
-            left:     50%; }
-        
-.hit-the-floor {
-color: #fff;
-font-size: 12em;
-font-weight: bold;
-font-family: Helvetica;
-text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
+.fader img {
+    /* Stretching the images to fill whole elements */
+    width: 100%;
+    height: 100%;
+    /* Preventing blank space below the image */
+    line-height: 0;
+    /* A one-second transition was to disturbing for me */
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.fader img:hover {
+    /* Making images appear bigger and transparent on mouseover */
+    width: 120%;
+    opacity: 1;
+    height: 120%;
+}
+
+.fader .text {
+    /* Placing text behind images */
+    z-index: -10;
+    /* Positioning text top-left conrner in the middle of elements */
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
 
 .hit-the-floor {
-  text-align: center;
+    color: #fff;
+    font-size: 12em;
+    font-weight: bold;
+    font-family: Helvetica;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
+}
+
+.hit-the-floor {
+    text-align: center;
 }
 
 body {
-  background-color: #f1f1f1;
+    background-color: #f1f1f1;
 }
 
 .coolText {
     text-shadow: 0px 2px 3px #666;
-        margin-bottom: 4%;
+    margin-bottom: 4%;
 }
