--- a/Client/main.css
+++ b/Client/main.css
@@ -95,10 +95,15 @@ html {
   transition: all .5s ease-in;
 }
 
+.latest-name-tag{
+    vertical-align: middle;
+    display: inline-block;
+    font-size: xx-large;
+}
+
 .precentage-label{
-    position: relative;
-    top: -75px;
-    left: 15px;
+    vertical-align: middle;
+    display: inline-block;
     font-size: xx-large;
 }
 
@@ -117,13 +122,15 @@ html {
 }
 
 .player-name {
-    position: relative;
-    left: -23%;
-    top: 50%;
+display: inline-block;
+
+    vertical-align: middle;
+    float: none;
 }
 
 .player-list{
     display: inline-block;
+}
 img {
     display: inline-block;
 }
@@ -157,10 +164,17 @@ body{
   transition: all .5s ease-in;
 }
 
+.latest-name-tag{
+    position: relative;
+    left: -40px;
+    font-size: xx-large;
+}
+
+
 .precentage-label{
     position: relative;
-    top: -75px;
-    left: 15px;
+    top: -130px;
+    left: 10%;
     font-size: xx-large;
 }
 
@@ -170,6 +184,7 @@ body{
 
 .shirt {
     max-width: 100%;
+
 }
 
 .faded-game:hover {
@@ -180,7 +195,7 @@ body{
 
 .player-name {
     position: relative;
-    left: -23%;
+    left: -15%;
     top: 50%;
 }
 
@@ -190,9 +205,38 @@ body{
 
 body {
     background-color: #f1f1f1;
+    overflow-x:hidden;
 }
 
 .coolText {
     text-shadow: 0px 2px 3px #666;
     margin-bottom: 4%;
+}
+
+.lasttwo .precentage-label{
+    position: relative;
+    top: -130px;
+    left: 35px !important;
+    font-size: xx-large;
+}
+
+.lasttwo .latest-name-tag{
+    position: relative;
+    font-size: large;
+}
+
+.circle {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  font-size: 50px;
+  color: #fff;
+  line-height: 500px;
+  text-align: center;
+  background: #000
+}
+
+.nametag 
+{
+    top: -200% !important;
 }
