--- a/Client/main.css
+++ b/Client/main.css
@@ -74,10 +74,6 @@ html {
 .hit-the-floor {
     text-align: center;
 }
-.chosen-game{
-    transform: scale(1.2);
-    transition: all .5s ease-in;
-}
 
 .chosen-game:hover {
     -moz-box-shadow: 0 0 5px 5px rgba(255,150,1,1);
@@ -131,21 +127,23 @@ display: inline-block;
 .player-list{
     display: inline-block;
 }
+
 img {
     display: inline-block;
 }
-
-.game-list {
-    display: inline-block;
-}
-
-body{
-    text-align: center;
-}
-
 .chosen-game{
-    transform: scale(1.2);
-    transition: all .5s ease-in;
+    transform: scale(1.5);
+    transition: all .5s ease-in-out;
+    z-index: 10000;
+    width: 360px;
+}
+
+.game-container {
+    padding: 50px;
+}
+
+.center {
+    margin: 0 auto;
 }
 
 .chosen-game:hover {
@@ -160,8 +158,10 @@ body{
 .faded-game {
     opacity: 0.5;
     border-radius: 30%;
-  transform: scale(0.8);
-  transition: all .5s ease-in;
+    width: 200px;
+    z-index: 0;
+  /*transform: scale(1);
+  transition: all .5s ease-in-out;*/
 }
 
 .latest-name-tag{
