--- a/Client/prod/main.css
+++ b/Client/prod/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 html {
-    background: url(img/bg.jpg) no-repeat center center fixed;
+    background: url('images/img/bg.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -87,8 +87,6 @@ html {
 .faded-game {
     opacity: 0.5;
     border-radius: 30%;
-  transform: scale(0.8);
-  transition: all .5s ease-in;
 }
 
 .latest-name-tag{
@@ -173,8 +171,6 @@ img {
     border-radius: 30%;
     width: 200px;
     z-index: 0;
-  /*transform: scale(1);
-  transition: all .5s ease-in-out;*/
 }
 
 .latest-name-tag{
@@ -218,7 +214,7 @@ img {
 }
 
 body {
-    background-color: #f1f1f1;
+
     overflow-x:hidden;
 }
 
